updates side nav and arrow on brands and fixes jumping on smooth scroll

--- a/app/assets/stylesheets/brands.sass
+++ b/app/assets/stylesheets/brands.sass
@@ -138,6 +138,7 @@ img ~ .brand-btn-primary, img ~ .brand-btn-secondary
   padding: 20px
   width: 65%
   border-radius: 15px
+  position: relative
 
 .white-block
   color: $white
@@ -147,6 +148,9 @@ img ~ .brand-btn-primary, img ~ .brand-btn-secondary
   background-color: $white
   border: none
   border-radius: 5px
+  position: absolute
+  right: 2%
+  bottom: 5%
 
 /***********  Media Q's  ***********/
 
